--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
   <properties>
 
     <!-- For Docker setup see https://docs.kalix.io/projects/container-registries.html -->
-    <kalixContainerRegistry>kcr.us-east-1.kalix.io</kalixContainerRegistry>
-    <kalixOrganization>acme</kalixOrganization>
+    <kalixContainerRegistry>kcr.us-east-2.kalix.st</kalixContainerRegistry>
+    <kalixOrganization>lightbend</kalixOrganization>
     <dockerImage>${kalixContainerRegistry}/${kalixOrganization}/${project.artifactId}</dockerImage>
     <dockerTag>${project.version}-${build.timestamp}</dockerTag>
     <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
