--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,15 @@
     <kalixContainerRegistry>kcr.us-east-1.kalix.io</kalixContainerRegistry>
     <kalixOrganization>lightbend-eng</kalixOrganization>
     <dockerImage>${kalixContainerRegistry}/${kalixOrganization}/${project.artifactId}</dockerImage>
-    <dockerTag>${project.version}-${build.timestamp}</dockerTag>
+    <dockerTag>${project.version}-${git.commit.id.abbrev}</dockerTag>
     <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
     <mainClass>io.kalix.Main</mainClass>
 
     <java.version>21</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <kalix-sdk.version>1.3.7-8-6849f620-dev-SNAPSHOT</kalix-sdk.version>
+<!--    <kalix-sdk.version>1.3.7-8-6849f620-dev-SNAPSHOT</kalix-sdk.version>-->
+    <kalix-sdk.version>1.3.7</kalix-sdk.version>
   </properties>
 
   <build>
@@ -70,6 +71,24 @@
 
     <plugins>
       <plugin>
+        <groupId>io.github.git-commit-id</groupId>
+        <artifactId>git-commit-id-maven-plugin</artifactId>
+        <version>7.0.0</version>
+        <executions>
+          <execution>
+            <id>get-the-git-infos</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <verbose>false</verbose>
+          <injectAllReactorProjects>true</injectAllReactorProjects>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -90,7 +109,7 @@
               <name>${dockerImage}:%l</name>
               <build>
                 <!-- Base Docker image which contains jre-->
-                <from>docker.io/library/eclipse-temurin:${jdk.target}-alpine</from>
+                <from>docker.io/library/eclipse-temurin:${java.version}-alpine</from>
                 <createImageOptions>
                   <platform>linux/amd64</platform>
                 </createImageOptions>
@@ -110,6 +129,7 @@
                   <arg>java</arg>
                   <arg>-jar</arg>
                   <arg>/maven/${project.build.finalName}.jar</arg>
+                  <arg>-Dspring.profiles.active=production</arg>
                 </entryPoint>
               </build>
             </image>
@@ -195,10 +215,13 @@
           </execution>
         </executions>
         <configuration>
+          <jvmArgs>
+            <arg>-Dspring.profiles.active=production</arg>
+          </jvmArgs>
           <dockerImage>${dockerImage}:${dockerTag}</dockerImage>
           <mainClass>${mainClass}</mainClass>
-          <kalixContext>stage</kalixContext>
-          <kalixProject>cfp-notifier</kalixProject>
+<!--          <kalixContext>stage</kalixContext>-->
+<!--          <kalixProject>cfp-notifier</kalixProject>-->
         </configuration>
       </plugin>
       <plugin>
@@ -263,7 +286,6 @@
       <artifactId>json-path</artifactId>
       <version>2.8.0</version>
     </dependency>
-
 
     <dependency>
       <groupId>io.kalix</groupId>
