disabling IT tests

--- a/.github/workflows/cfp-notifier-pipeline.yml
+++ b/.github/workflows/cfp-notifier-pipeline.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Kalix CLI
-        uses: aludwiko/setup-kalix@main
+        uses: aludwiko/setup-kalix@setup-kalix-step
         with:
           token: ${{ secrets.KALIX_PROD_TOKEN }}
           project-id: ${{ vars.KALIX_PROD_PROJECT }}
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Kalix CLI
-        uses: aludwiko/setup-kalix@main
+        uses: aludwiko/setup-kalix@setup-kalix-step
         with:
           token: ${{ secrets.KALIX_PROD_TOKEN }}
           project-id: ${{ vars.KALIX_PROD_PROJECT }}
