testing setup-kalix

--- a/.github/workflows/cfp-notifier-pipeline.yml
+++ b/.github/workflows/cfp-notifier-pipeline.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           token: ${{ secrets.KALIX_PROD_TOKEN }}
           project-id: ${{ vars.KALIX_PROD_PROJECT }}
+      - name: Test
+        run: kalix service list
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
