switching to lightbend/setup-kalix-action

--- a/.github/workflows/cfp-notifier-pipeline.yml
+++ b/.github/workflows/cfp-notifier-pipeline.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Kalix CLI
-        uses: aludwiko/setup-kalix@setup-kalix-step
+        uses: lightbend/setup-kalix-action@setup-kalix-step
         with:
           token: ${{ secrets.KALIX_PROD_TOKEN }}
           project-id: ${{ vars.KALIX_PROD_PROJECT }}
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Kalix CLI
-        uses: aludwiko/setup-kalix@setup-kalix-step
+        uses: lightbend/setup-kalix-action@setup-kalix-step
         with:
           token: ${{ secrets.KALIX_PROD_TOKEN }}
           project-id: ${{ vars.KALIX_PROD_PROJECT }}
