--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,10 @@
-cfp {
+cfp.notifier {
   verification-token: ""
   verification-token: ${?SLACK_VERIFICATION_TOKEN}
   webhook: ""
   webhook: ${?SLACK_WEBHOOK_URL}
   bot-oauth-token: ""
   bot-oauth-token: ${?SLACK_BOT_OAUTH_TOKEN}
+  notification-intervals: "7,1" // 7 days before and 1 day before
+  notification-intervals: ${?SNOTIFICATION_INTERVALS}
 }
