--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@
 version: "3"
 services:
   kalix-runtime:
-    image: gcr.io/kalix-public/kalix-runtime:1.1.29
+    image: gcr.io/kalix-public/kalix-runtime:1.1.31
     container_name: cfp-notifier
     volumes:
       - ./target/kalix:/var/kalix
@@ -16,6 +16,7 @@ services:
     environment:
       PERSISTENCE_ENABLED: "true"
       JAVA_TOOL_OPTIONS: >
+        -Dakka.persistence.r2dbc.query.refresh-interval=500ms
       # jvm -D properties can be added under this environment map (note: remove this comment when adding properties)
 
       USER_FUNCTION_HOST: ${USER_FUNCTION_HOST:-host.docker.internal}
