--- a/.github/workflows/cfp-notifier-pipeline.yml
+++ b/.github/workflows/cfp-notifier-pipeline.yml
@@ -15,16 +15,9 @@ env:
 
 
 jobs:
-  build-and-deploy:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Install Kalix CLI
-        uses: lightbend/setup-kalix-action@v1
-        with:
-          token: ${{ secrets.KALIX_PROD_TOKEN }}
-          project-id: ${{ vars.KALIX_PROD_PROJECT }}
-      - name: Test
-        run: kalix service list
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
@@ -34,6 +27,19 @@ jobs:
         uses: actions/checkout@v2
       - name: Build and verify
         run: mvn clean verify -Pit --no-transfer-progress
+
+  deploy:
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Kalix CLI
+        uses: lightbend/setup-kalix-action@v1
+        with:
+          token: ${{ secrets.KALIX_PROD_TOKEN }}
+          project-id: ${{ vars.KALIX_PROD_PROJECT }}
+      - name: Test
+        run: kalix service list
       - name: Publish docker
         run: |
           mvn deploy --no-transfer-progress
@@ -44,9 +50,11 @@ jobs:
           export CFP_NOTIFIER_IMAGE=$dockerImage:$dockerTag
           cat cfp-notifier.yml | envsubst > cfp-notifier-subst.yml
           kalix service apply -f cfp-notifier-subst.yml
+
   verify-ready:
-    needs: build-and-deploy
+    needs: deploy
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Install Kalix CLI
         uses: lightbend/setup-kalix-action@v1
