--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@
 version: "3"
 services:
   kalix-runtime:
-    image: gcr.io/kalix-public/kalix-runtime:1.1.31
+    image: gcr.io/kalix-public/kalix-runtime:1.1.34
     container_name: cfp-notifier
     volumes:
       - ./target/kalix:/var/kalix
@@ -17,10 +17,12 @@ services:
       PERSISTENCE_ENABLED: "true"
       JAVA_TOOL_OPTIONS: >
         -Dakka.persistence.r2dbc.query.refresh-interval=500ms
+#        -Dkalix.proxy.telemetry.tracing.enabled=true
+#        -Dkalix.proxy.telemetry.tracing.collector-endpoint=http://localhost:4317
       # jvm -D properties can be added under this environment map (note: remove this comment when adding properties)
-
-      USER_FUNCTION_HOST: ${USER_FUNCTION_HOST:-host.docker.internal}
-      USER_FUNCTION_PORT: ${USER_FUNCTION_PORT:-8080}
+      ADVERTISED_HTTP_PORT: ${ADVERTISED_HTTP_PORT}
+      USER_SERVICE_HOST: ${USER_SERVICE_HOST}
+      USER_SERVICE_PORT: ${USER_SERVICE_PORT}
       # Comment to enable ACL check in dev-mode (see https://docs.kalix.io/services/using-acls.html#_local_development_with_acls)
       ACL_ENABLED: "false"
       # Uncomment to enable advanced view features locally (note: disabled in deployed services by default)
@@ -36,4 +38,25 @@ services:
   #  command: gcloud beta emulators pubsub start --project=test --host-port=0.0.0.0:8085
   #  ports:
   #    - 8085:8085
+
+#  tempo:
+#    image: grafana/tempo:latest
+#    command: [ "-config.file=/etc/tempo.yaml" ]
+#    volumes:
+#      - ./tempo-config/tempo.yaml:/etc/tempo.yaml
+#      - ./tempo-data/:/tmp/tempo
+#    ports:
+#      - "14268:14268"  # jaeger ingest
+#      - "3200:3200"   # tempo
+#      - "4317:4317"
+#
+#  tempo-query:
+#    image: grafana/tempo-query:latest
+#    command: [ "--grpc-storage-plugin.configuration-file=/etc/tempo-query.yaml" ]
+#    volumes:
+#      - ./tempo-config/tempo-query.yaml:/etc/tempo-query.yaml
+#    ports:
+#      - "16686:16686"  # jaeger-ui
+#    depends_on:
+#      - tempo
 
