--- a/.github/workflows/cfp-notifier-pipeline.yml
+++ b/.github/workflows/cfp-notifier-pipeline.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install Kalix CLI
-        uses: lightbend/setup-kalix-action@v1
+        uses: lightbend/setup-kalix-action@2134-usage-of-tmp-dir-in-kalix
         with:
           token: ${{ secrets.KALIX_PROD_TOKEN }}
           project-id: ${{ vars.KALIX_PROD_PROJECT }}
