--- a/.github/workflows/cfp-notifier-pipeline.yml
+++ b/.github/workflows/cfp-notifier-pipeline.yml
@@ -25,6 +25,12 @@ jobs:
           java-version: '21'
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Install Compose
+        uses: ndeloof/install-compose-action@v0.0.1
+        with:
+          version: v2.1.0 # defaults to 'latest'
+          legacy: true    # will also install in PATH as `docker-compose`
+      - run: docker-compose --version
       - name: Build and verify
         run: mvn clean verify -Pit --no-transfer-progress
 
